Bug 484181 - spellcheck broken in contenteditable DIV with preceding empty DIV within a DIV; r=roc