editor/libeditor/html/nsHTMLEditRules.cpp
@@ -8019,8 +8019,10 @@ nsHTMLEditRules::RemoveEmptyNodes()
   {
     nsCOMPtr<nsIDOMNode> delNode = arrayOfEmptyNodes[0];
     arrayOfEmptyNodes.RemoveObjectAt(0);
-    res = mHTMLEditor->DeleteNode(delNode);
-    if (NS_FAILED(res)) return res;
+    if (mHTMLEditor->IsModifiableNode(delNode)) {
+      res = mHTMLEditor->DeleteNode(delNode);
+      NS_ENSURE_SUCCESS(res, res);
+    }
   }
   
   // now delete the empty mailcites
